--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,11 +1,14 @@
-@import '~bootstrap';
+@import "~bootswatch/dist/journal/variables";
+@import "~bootstrap";
+@import "~bootswatch/dist/journal/bootswatch";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import "./_pages/main.scss";
+@import "./_pages/registration_index.scss";
+@import "./_pages/connection_index.scss";
+@import "./_pages/home_index.scss";
+@import "./_pages/news_index.scss";
+@import "./_pages/changePassword.scss";
+@import "./_pages/mission-index.scss";
+@import "./_pages/administration-index.scss";
 
 
-.container{
-    width:100%;
-    height:100%;
-        div{
-            height: 100px;
-            width:100px;
-        }
-}
