--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="{{asset('images/favicon.ico')}}"/>
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body {% block classBody %}{% endblock %}>
         {% block body %}{% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            {% if not app.request.attributes.get('_route') == 'app_login' %}
+            {{ encore_entry_script_tags('modal') }}
+            {% endif %}
         {% endblock %}
     </body>
 </html>
