--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -7,8 +7,8 @@
 @import "./_pages/connection_index.scss";
 @import "./_pages/home_index.scss";
 @import "./_pages/news_index.scss";
+@import "./_pages/mission_index.scss";
 @import "./_pages/changePassword.scss";
-@import "./_pages/mission-index.scss";
 @import "./_pages/administration-index.scss";
 
 
