--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -14,7 +14,7 @@
 {% endfor %}
 
 <h1 class="mt-4">Bonjour <br>{{user.getFullName}}</h1>
-<p class="dateToday">Nous sommes le <time><datetime>{{today_date|date('d/m/Y')}}</datetime></time> et voici les dernières actualités de l'Entreprise :</p>
+<p class="dateToday mt-3">Nous sommes le <time><datetime>{{today_date|date('d/m/Y')}}</datetime></time> et voici les dernières actualités de l'Entreprise :</p>
 
 <div class="show-news">
     <div>
