--- a/templates/access_mission/index.html.twig
+++ b/templates/access_mission/index.html.twig
@@ -15,13 +15,15 @@
     {% set missionValidate = 0 %}
     <section class="d-flex flex-wrap justify-content-around">
         {% for mission in user.missions %}
-        <div class="missions">
+        
         {% if not mission.isValidate %}
-            <div class="mission">
-                {{mission.content|raw}}
+            <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card-body">
+                <p class="card-text">{{mission.content|raw}}</p>
+                <p class="text-center"><a href="{{path('validate_mission', {'id': mission.id})}}" class="btn btn-primary">Valider la mission</a></p>
             </div>
-            <a href="{{path('validate_mission', {'id': mission.id})}}" class="btn btn-primary">Valider la mission</a>
-        </div>
+            </div>
+        
             {% set missionNotValidate = missionNotValidate + 1 %}
         {% else %}
             {% set missionValidate = missionValidate + 1 %}
@@ -38,3 +40,5 @@
 </main>
 
 {% endblock %}
+
+
