--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -27,4 +27,8 @@
         <p class="text-center"><button type="submit" class="btn btn-primary">Enregistrer</button></p>
     {{ form_end(form) }}
 </section>
+{% block javascripts %}
+{{ parent() }}
+{{ encore_entry_script_tags('isChecked') }}
+{% endblock %}
 {% endblock %}
