--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,7 +6,9 @@
 @import "./_pages/registration_index.scss";
 @import "./_pages/connection_index.scss";
 @import "./_pages/home_index.scss";
-@import "./_pages/news_index.scss";
+@import "./_pages/create_news.scss";
+@import "./_pages/send_mission_index.scss";
+@import "./_pages/employee_edit_index.scss";
 @import "./_pages/mission_index.scss";
 @import "./_pages/changePassword.scss";
 @import "./_pages/administration-index.scss";
