--- a/templates/admin/edit_news.html.twig
+++ b/templates/admin/edit_news.html.twig
@@ -11,7 +11,7 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
 
-    <button class="btn btn-primary">Éditer</button>
+    <p class="text-center"><button class="btn btn-primary">Éditer</button></p>
 {{ form_end(form) }}
 </section>
 {% endblock %}
