--- a/templates/admin/manage.html.twig
+++ b/templates/admin/manage.html.twig
@@ -9,15 +9,15 @@
 
 <section class="d-flex justify-content-around align-items-center">
         <figure class="d-flex flex-column">
-            <a href="{{path('manage_user')}}"><img src="{{asset('images/employee.png')}}" alt="employee">
-                <figcaption class="text-center">
+            <a href="{{path('manage_user')}}"><img src="{{asset('images/employee.png')}}" class="mb-2" alt="employee">
+                <figcaption class="text-center alert alert-dismissible alert-primary">
                     Pour gérer vos employés, cliquer sur l'image 🧍‍♂️🧍‍♀️
                 </figcaption>
             </a>
         </figure>
         <figure class="d-flex flex-column">
-            <a href="{{path('manage_news')}}"><img src="{{asset('images/news.png')}}" alt="employee">
-            <figcaption class="text-center">
+            <a href="{{path('manage_news')}}" class="text-center"><img src="{{asset('images/news.png')}}" class="mb-2" alt="news">
+            <figcaption class="text-center alert alert-dismissible alert-secondary">
                 Pour gérer vos actualités, cliquer sur l'image 👨‍💻👨‍💻
             </figcaption>
             </a>
