--- a/templates/change_password/password.html.twig
+++ b/templates/change_password/password.html.twig
@@ -6,10 +6,15 @@
 {% block body %}
 {% include '_component/_nav.html.twig' %}
 {% include '_component/_modal_logout.html.twig' %}
+
     <section class="change-pass">
     {{ form_start(form) }}
+        <h1 class="text-center mb-3">Changer votre mot de passe</h1>
         {{ form_widget(form) }}
-        <button class="btn btn-primary">Enregistrer votre nouveau mot de passe</button>
+        <p class="text-center">
+            <button class="btn btn-primary">Enregistrer votre nouveau mot de passe</button>
+        </p>
+
     {{ form_end(form) }}
     </section>
 
