--- a/assets/css/_pages/administration-index.scss
+++ b/assets/css/_pages/administration-index.scss
@@ -1,11 +1,31 @@
 @import "./_variables/_variables.scss";
 
-section{
-    height: calc(100% - #{$navHeight});
-    figure{
-        img{
-            max-width: 100%;
-            height:300px;
+.administration-index{
+    section{
+        height: calc(100% - #{$navHeight});
+        figure{
+            img{
+                max-width: 100%;
+                height:300px;
+            }
+        }
+    }
+}
+
+.admin{
+    .search-user{
+        width: 80%;
+        display: flex;
+        margin: auto;
+    }
+
+    table{
+        width: 80%;
+        margin: auto;
+        box-shadow: $basicBoxShadow;
+
+        th{
+            border-top: none;
         }
     }
 }
