--- a/assets/css/_pages/main.scss
+++ b/assets/css/_pages/main.scss
@@ -65,4 +65,12 @@ body{
             font-weight: 700;
         }
     }
+
+    a:hover{
+        text-decoration: none;
+    }
+
+    kbd{
+        font-size:100%;
+    }
 }
