--- a/assets/css/_variables/_variables.scss
+++ b/assets/css/_variables/_variables.scss
@@ -7,3 +7,4 @@ $formShadow : 0 2.8px 2.2px rgba(41,23,26, 0.02),
 0 22.3px 17.9px rgba(41,23,26, 0.042),
 0 41.8px 33.4px rgba(41,23,26, 0.05),
 0 100px 80px rgba(41,23,26, 0.07);
+$basicBoxShadow : 0 0 7px rgba(0,0,0,0.44);
